# teenify

./: LICENSE  README.md  pyproject.toml
app/: main.py
teenify/: __init__.py  cli.py
